# meta---hackathon

./: .gitignore  Dockerfile  README.md  __init__.py  agent_loop.py  client.py  environment.py  grader.py  inference.py  models.py  multi_agent_loop.py  openenv.yaml  pyproject.toml  rl_env.py  run_validator.ps1  tasks.py  test_hackathon_endpoints.py  test_openenv.py  trajectory_logger.py  utils.py
server/: Dockerfile  __init__.py  app.py  environment.py
