[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "execucode"
version = "0.1.0"
description = "Conversational execution-aware code optimization environment for OpenEnv."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=2.19",
    "fastapi>=0.115",
    "google-genai>=0.3",
    "google-generativeai>=0.8",
    "gymnasium>=0.29",
    "openai>=1.0",
    "openenv-core>=0.2.3",
    "pydantic>=2.0",
    "requests>=2.28.0",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
test = [
    "httpx>=0.27",
    "pytest>=8.0",
]

[project.scripts]
server = "execucode.server.app:main"

[tool.setuptools]
packages = ["execucode", "execucode.server"]

[tool.setuptools.package-dir]
execucode = "."
"execucode.server" = "server"
